# BORBA-v1.3

./: .gitignore  CMakeLists.txt  README.md
data/: fighters.csv
include/controllers/: Forms.h
include/models/: Battle.h  Fighter.h
include/utils/: Tools.h
include/views/: Animation.h  UI.h
src/: main.cpp
src/controllers/: Forms.cpp
src/models/: Battle.cpp  Fighter.cpp
src/utils/: Tools.cpp
src/views/: UI.cpp
